--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+attrs==21.2.0
 decorator==4.4.2
+iniconfig==1.1.1
 networkx==2.5.1
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+toml==0.10.2
